Adiciona variáveis de configuração SMTP ao arquivo .env.example e comenta envio de notificações via WhatsApp na função sendNotifications

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,7 @@
 VITE_SUPABASE_URL=your_supabase_url_here
 VITE_SUPABASE_ANON_KEY=your_supabase_anon_key_here
+MAIL_HOST=your_smtp_host_here
+MAIL_PORT=your_smtp_port_here
+MAIL_USER=your_smtp_user_here
+MAIL_PASS=your_smtp_pass_here
+MAIL_FROM="Your Name <your_email@example.com>"
