--- a/package.json
+++ b/package.json
@@ -6,12 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview",
-    "test": "vitest",
-    "test:ui": "vitest --ui",
-    "test:coverage": "vitest run --coverage",
-    "test:e2e": "cypress open",
-    "test:e2e:headless": "cypress run"
+    "preview": "vite preview"
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.39.0",
@@ -19,15 +14,9 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.4",
-    "@vitest/coverage-v8": "^4.0.7",
-    "@vitest/ui": "^4.0.7",
-    "@vue/test-utils": "^2.4.1",
     "autoprefixer": "^10.4.17",
-    "cypress": "^13.6.0",
-    "jsdom": "^23.0.1",
     "postcss": "^8.4.35",
     "tailwindcss": "^3.4.1",
-    "vite": "^6.4.1",
-    "vitest": "^4.0.7"
+    "vite": "^6.4.1"
   }
 }
