feat: migrar de Nodemailer para MailerSend
- Substituir SMTP por MailerSend API
- Atualizar variáveis de ambiente necessárias
- Remover dependência do nodemailer
- Atualizar documentação no README
- Manter mesmo template de email HTML/texto

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.39.0",
-    "nodemailer": "^7.0.10",
+    "mailersend": "^2.6.0",
     "twilio": "^5.0.0",
     "vue": "^3.4.21"
   },
