--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,13 @@
 VITE_SUPABASE_URL=your_supabase_url_here
 VITE_SUPABASE_ANON_KEY=your_supabase_anon_key_here
+
+# MailerSend Configuration
+MAILERSEND_API_KEY=your_mailersend_api_key_here
+MAIL_FROM=noreply@yourdomain.com
+MAIL_FROM_NAME=Your Company Name
+
+# Legacy SMTP Configuration (optional, for fallback)
 MAIL_HOST=your_smtp_host_here
 MAIL_PORT=your_smtp_port_here
 MAIL_USER=your_smtp_user_here
 MAIL_PASS=your_smtp_pass_here
-MAIL_FROM="Your Name <your_email@example.com>"
