--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.39.0",
-    "mailersend": "^2.6.0",
+    "dotenv": "^17.2.3",
     "twilio": "^5.0.0",
     "vue": "^3.4.21"
   },
