--- a/netlify.toml
+++ b/netlify.toml
@@ -4,7 +4,7 @@
   functions = ".netlify/functions"
 
 [build.environment]
-  SECRETS_SCAN_OMIT_KEYS = "VITE_SUPABASE_ANON_KEY,VITE_SUPABASE_URL"
+  SECRETS_SCAN_OMIT_KEYS = "VITE_SUPABASE_ANON_KEY,VITE_SUPABASE_URL,BREVO_API_KEY,MAIL_FROM_NAME,MAIL_FROM"
 
 [[redirects]]
   from = "/*"
